--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            {% if site.logo %}
+            <img src="{{ site.logo }}" style="height: 50px">
+            {% endif %}
+            <!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,7 +21,7 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
-				{% for page in site.pages %}{% if page.url contains "projects/" %}{% if page.title %}
+                {% for page in site.pages %}{% if page.url contains "projects/" %}{% if page.title %}
                 <li>
                     <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                 </li>
