--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,13 +9,13 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="site-heading" style="padding: 75px 0">
 					{% if page.url == '/' %}
-					{% if site.logo %}
-					<img src= "{{ site.logo }}" style="height: 150px">
+					{% if site.icon %}
+					<img src= "{{ site.icon }}" style="height: 150px">
 					{% endif %}	
 					{% else %}{% endif %}	
-                    <!-- <h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1> -->
+                    <h3>{{ page.title }}</h3>
                     <!-- <hr class="small"> -->
-                    <span class="subheading">{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}</span>
+                    <span class="subheading">{{ page.description }}</span>
                 </div>
             </div>
         </div>
