--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,7 +61,7 @@
                   </li>
                   {% endif %}				
               </ul>
-              <p class="copyright text-muted">Created by <a href="http://www.farscapian.com/" target="_blank">farscapian</a> and <a href="https://github.com/BitcoinCacheMachine" target="_blank">Bitcoin Cache Machine</a> 2019. </p>
+              <p class="copyright text-muted">All rights reserved. Created by <a href="http://www.farscapian.com/" target="_blank">farscapian</a> and <a href="https://github.com/BitcoinCacheMachine" target="_blank">Bitcoin Cache Machine</a> 2019. </p>
           </div>
       </div>
   </div>
