--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,16 +21,11 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
-                {% for page in site.pages %}{% if page.url contains "projects/" %}{% if page.title %}
+                {% for page in site.pages %}{% if page.title %}
                 <li>
                     <a href="{{ page.url }}">{{ page.title }}</a>
                 </li>
-                {% endif %}{% endif %}{% endfor %}
-                {% for page in site.pages %}{% if page.url contains "projects/" %}{% else %}{% if page.title %}
-                <li>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
-                </li>
-                {% endif %}{% endif %}{% endfor %}
+                {% endif %}{% endfor %}
             </ul>
         </div>
         <!-- /.navbar-collapse -->
