--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,41 +1,41 @@
 <!-- Footer -->
 <footer>
-  <div class="container">
-      <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-              <ul class="list-inline text-center">
-                  <li>
-                      <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
-                          <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-                          </span>
-                      </a>
-                  </li>
-                  {% if site.twitter_username %}
-                  <li>
-                      <a href="https://twitter.com/{{ site.twitter_username }}">
-                          <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                          </span>
-                      </a>
-                  </li>
-                  {% endif %}
-                  {% if site.github_username %}
-                  <li>
-                      <a href="https://github.com/{{ site.github_username }}/{{ site.project_repository}}">
-                          <span class="fa-stack fa-lg">
-                              <i class="fa fa-circle fa-stack-2x"></i>
-                              <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                          </span>
-                      </a>
-                  </li>
-                  {% endif %}
-    			
-              </ul>
-              <p class="copyright text-muted">Created by <a href="http://www.farscapian.com/" target="_blank">farscapian</a> for <a href="https://github.com/BitcoinCacheMachine" target="_blank">Bitcoin Cache Machine</a> Last updated Feb 2019.</p>
-          </div>
-      </div>
-  </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <ul class="list-inline text-center">
+                    <li>
+                        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% if site.twitter_username %}
+                    <li>
+                        <a href="https://twitter.com/{{ site.twitter_username }}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% if site.github_username %}
+                    <li>
+                        <a href="https://github.com/{{ site.github_username }}/{{ site.project_repository}}">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {% endif %}
+
+                </ul>
+                <p class="copyright">copyright {{ 'now' | date: "%Y" }} | <a href="https://github.com/BitcoinCacheMachine" target="_blank">Bitcoin Cache Machine</a> | All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
 </footer>
