--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             {% if site.logo %}
-            <img src="{{ site.logo }}" style="height: 55px">
+            <img src="{{ site.logo }}" style="height: 50px; margin-top: 20px;">
             {% endif %}
             <!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
         </div>
@@ -21,11 +21,15 @@
                 <li>
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
-                {% for page in site.pages %}{% if page.title %}
                 <li>
-                    <a href="{{ page.url }}">{{ page.title }}</a>
+                    <a href="{{ site.baseurl }}/about">About</a>
                 </li>
-                {% endif %}{% endfor %}
+                <li>
+                    <a href="{{ site.baseurl }}/docs">Docs</a>
+                </li>
+                <li>
+                    <a href="{{ site.baseurl }}/members">Members</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
