Changes per request to fonts on blog and fixed menu

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             {% if site.logo %}
-            <img src="{{ site.logo }}" style="height: 50px; margin-top: 20px;">
+            <a href="{{ site.baseurl }}/"><img src="{{ site.logo }}" style="height: 50px; margin-top: 10px;"></a>
             {% endif %}
             <!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
         </div>
